# proxygen_playground

./: CMakeLists.txt  README.md  main.cpp  myhandler.cpp  myhandler.h  servicenode.cpp  servicenode.h  servicenodetest.cpp  serviceregistry.cpp  serviceregistry.h  serviceregistryhandler.cpp  serviceregistryhandler.h  test_main.cpp  timehandler.cpp  timehandler.h
